# ecsctx

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.codex/: config.toml
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
ecsctx/: CLAUDE.md  __init__.py  context.py  ecs_validator.py  processors.py
ecsctx/contrib/: __init__.py
ecsctx/contrib/celery/: __init__.py  log_context.py
ecsctx/contrib/django/: CLAUDE.md  __init__.py  context_binder.py  decorators.py  logging.py  middleware.py  processors.py
ecsctx/contrib/rq/: __init__.py  log_context.py
ecsctx/pii/: __init__.py  crypto.py  keyset.py  provider.py  vault.py
logctx/: CLAUDE.md  __init__.py  context.py  decorators.py  ecs_validator.py  enums.py  formatters.py  middleware.py  processors.py
logctx/contrib/celery/: __init__.py  log_context.py
logctx/contrib/django/: CLAUDE.md  __init__.py  context_binder.py  decorators.py  logging.py  middleware.py  processors.py
logctx/contrib/rq/: __init__.py  log_context.py
logctx/pii/: __init__.py  crypto.py  keyset.py  normalize.py  provider.py  vault.py
logctx/structlog/: context_binder.py  ecs_validator.py  formatters.py  loggers.py  processors.py
tests/: conftest.py  django_settings.py  test_context.py  test_context_binder.py  test_crypto.py  test_django_decorators.py  test_django_logging.py  test_django_middleware.py  test_django_processors.py  test_keyset.py  test_message_event_collision.py  test_pii_init.py  test_processors.py  test_vault.py  urls.py
