[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logctx"
version = "0.2.0"
description = "Context-aware structured logging with ECS compliance and distributed tracing"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.10"

# Core dependencies (framework-agnostic)
dependencies = [
    "structlog>=24.1.0",
    "ecs-logging>=2.1.0",
    "cryptography>=41.0.0",
    "django-cid>=3.0",
]

[project.optional-dependencies]
django = [
    "django>=4.0",
    "django-ipware>=5.0.0",
    "sentry-sdk>=1.0.0",
]
auditlog = [
    "django-auditlog>=3.0",
]
rq = [
    "rq==1.16.2",
]
celery = [
    "celery>=5.6.2",
]


[tool.hatch.build.targets.wheel]
packages = ["logctx"]
