[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ecsctx"
version = "0.4.2"
description = "Context-aware structured logging with ECS compliance and distributed tracing"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Django",
    "Intended Audience :: Developers",
]

# Core dependencies (framework-agnostic)
dependencies = [
    "structlog>=24.1.0",
    "ecs-logging>=2.1.0",
    "cryptography>=41.0.0",
    "django-cid>=3.0",
]

[project.urls]
Homepage = "https://github.com/ottuco/ecsctx"
Repository = "https://github.com/ottuco/ecsctx"
Issues = "https://github.com/ottuco/ecsctx/issues"

[project.optional-dependencies]
django = [
    "django>=4.0",
    "django-ipware>=5.0.0",
    "djangorestframework>=3.14.0",
    "sentry-sdk>=1.0.0",
]
auditlog = [
    "django-auditlog>=3.0",
]
rq = [
    "rq==1.16.2",
]
celery = [
    "celery>=5.6.2",
]

[dependency-groups]
test = [
    "pytest>=7.0",
    "pytest-django>=4.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["ecsctx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "tests.django_settings"
